[package]
name = "rust_trading_bot"
version = "0.1.0"
authors = ["Epictetzu <scruffystoner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = "1.0.119"
tdameritradeclient = { git = "https://github.com/Epictetzu/tdameritradeclient.git", branch = "master" }